2007-03-11  Satoshi Konno <skonno@cybergarage.org>
	* Added support of OpenSSL to socket functions in csocket.c.
	* Added CG_USE_OPENSSL define and --enable-openssl option to disable the SSL functions as default.
	* Added cg_https_request_post().
	* Changed a compiler flag about file functions from USE_CFILE to CG_USE_CFILE.
	* Added a framework of CppUnit.

2007-03-05  Satoshi Konno <skonno@cybergarage.org>
	* Changed cg_string_setnvalue() to use memcpy instead of strncpy().
	* Added a parameter of the string length for cg_string_setpointervalue() and to set a binary data.
	* Added a parameter of the string length for the following functions too. 
	  cg_http_packet_setcontentpointer(), cg_http_request_setcontentpointer() and cg_http_response_setcontentpointer().
	* Fixed cg_http_packet_read_body() to set the correct content length if the response has a field of the content length.
	
2007-02-25  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_xml_attribute_remove().

2007-02-19  Satoshi Konno <skonno@cybergarage.org>
	* Changed cg_http_request_post() to add a user agent, CyberGarage-HTTP/1.0, as default.
	* Changed CG_HTTP_USERAGENT to CG_HTTP_USERAGENT_DEFAULT to add CG_HTTP_USERAGENT as the normal header define.
	* Changed cg_http_packet_sethost() not to add the port string for lighttpd when the port number is 80.

2007-02-13  Satoshi Konno <skonno@cybergarage.org>
	* Fixed cg_str2*() to return 0 when the parameter is null.

2007-02-01  Satoshi Konno <skonno@cybergarage.org>
	* Fixed cg_http_request_post() not to hung up when the request method is HEAD.
	* Added a onlyHeader parameter to cg_http_response_read() and cg_http_response_packet().
	* Added CG_HTTP_USERAGENT when CyberLink doesn't use CURL.

2007-01-30  Satoshi Konno <skonno@cybergarage.org>
	* Fixed to compile normally on the release mode for Windows Mobile.
	
2007-01-19  Satoshi Konno <skonno@cybergarage.org>