@@ -275,7 +275,7 @@ BOOL cg_upnp_device_parsedescriptionurl(CgUpnpDevice *dev, CgNetURL *url)
 	CgHttpResponse *httpRes;
 	/*int statusCode;*/
 	char *content;
-	long contentLen;
+	CgInt64 contentLen;
 	BOOL parseSuccess;
 	
 	cg_log_debug_l4("Entering...\n");
